# OpenUnderwriter

./: .env.example  .gitignore  .htmlhintrc  .mcp.json  .stylelintrc.json  CLAUDE.md  MCP_SETUP_SUMMARY.md  OPECODE_STATUS_REPORT.html  OPENCODE.md  OPENCODE_SETUP.md  README.md  README_OPENCODE.md  Sasha_Master_Plan.md  USER_PROFILE.md  architecture.md  brain_map.md  check_all_html_truncation.py  check_cat_smci_qa.py  check_dis_qa.py  check_pg_qa.py  claude_handoff.md  gsd  opencode.json  package-lock.json  package.json  pyproject.toml  ruff.toml  run_aapl.sh  run_qa.py  setup_opencode.sh  ten_tickers.txt  test_deepseek.py  test_extractor.py
.opencode/: oh-my-opencode.json  profile.md
.planning/: .continue-here.md  ARCHITECTURE-v6.md  HANDOFF.json  MILESTONES.md  PAUSE.md  PRESENTATION-MAP.md  PROJECT.md  QA-CROSS-TICKER-FINDINGS.md  QUALITY-REPORT.md  QUESTION-DRIVEN-RENDERING.md  REQUIREMENTS-v3.1.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  SIGNAL_ARCHITECTURE_MILESTONE.md  STATE.md  TRACEABILITY-AUDIT.md  WORKSHEET-MANIFEST.md  v1-MILESTONE-AUDIT.md  v1.2-MILESTONE-AUDIT.md  v4.0-MILESTONE-AUDIT.md
Feedme/: Coinbase - Derivative Suit Loss Clarification Endorsement (SA.003).md  ORIC Pharmaceuticals — D&O Risk Profile.html  Public Referral Template 2025 (2).dotx  SA.003 (0208 Ed.) Side-A Directors and Officers Liability Insurance Policy.docx
config/: ground_truth_tickers.txt  health_check.yaml  pilot_tickers.txt  quality_checklist.json  render_exclusions.yaml  sector_do_concerns.json
docs/: RENDERING_PIPELINE.md  SIGNAL_AUTHOR_GUIDE.md  SYSTEM_ARCHITECTURE.md  TIER1_MANIFEST.md  ad-chart-style-spec.md  brain_analyzer_mcp.md
output/: CARD_TRACKER.html  OPS_DASHBOARD.html  brain_analysis_report.json  qa_test.py
scripts/: backtest_audit.py  batch_generate_do_context.py  (+34 more)
(+4378 files in other folders)
