[project]
name = "open-underwriter"
version = "0.2.0"
description = "OpenUnderwriter -- D&O Liability Worksheet System (OpenCode DeepSeek-optimized)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.10",
    "typer>=0.15",
    "rich>=13.0",
    "httpx[http2]>=0.28",
    "yfinance>=1.1.0",
    "rapidfuzz>=3.14.3",
    "aiolimiter>=1.2.1",
    "financedatabase>=2.3.1",
    "edgartools>=5.14.1",
    "pysentiment2>=0.1.1",
    "python-docx>=1.1.0",
    "matplotlib>=3.9.0",
    "jinja2>=3.1.0",
    "sqlalchemy>=2.0",
    "alembic>=1.18",
    "fastapi>=0.128.6",
    "uvicorn>=0.40.0",
    "plotly>=6.5.2",
    "openai>=1.0.0",
    "instructor>=1.14.0",
    "python-dotenv>=1.2.1",
    "textstat>=0.7.12",
    "duckdb>=1.4.4",
    "playwright>=1.58.0",
    "pyyaml>=6.0",
    "ruamel-yaml>=0.19.1",
    "mcp>=1.26.0",
]

[project.optional-dependencies]
pdf = ["weasyprint>=60.0"]

[project.scripts]
underwrite = "do_uw.cli:app"
angry-dolphin = "do_uw.cli:app"
do-uw = "do_uw.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/do_uw"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "output_validation: validates generated .docx output against ground truth (requires pipeline run)",
    "ci: CI gate tests that must pass before merge (schema validation, signal integrity)",
]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
venvPath = "."
venv = ".venv"

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "pytailwindcss>=0.3.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.0",
    "vulture>=2.14",
]
